<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <Button
        android:id="@+id/googlepay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:drawableEnd="@drawable/googlepay"
        android:text="@string/google_pay"
        app:layout_constraintBottom_toTopOf="@+id/phonepa"
        app:layout_constraintStart_toStartOf="@+id/phonepa"
        app:layout_constraintTop_toBottomOf="@+id/displayPay" />

    <Button
        android:id="@+id/phonepa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:drawableEnd="@drawable/phonepe"
        android:text="@string/phonepe"
        app:layout_constraintBottom_toTopOf="@+id/Pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googlepay" />

    <Button
        android:id="@+id/Pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="74dp"
        android:drawableEnd="@drawable/cash"
        android:text="@string/pay"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonepa" />

    <TextView
        android:id="@+id/displayPay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/googlepay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>